--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ jupyterlab = "*"
 numpy = "*"
 pandas = "*"
 matplotlib = "*"
+airtable-python-wrapper = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
