--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pandas = "*"
 matplotlib = "*"
 airtable-python-wrapper = "*"
 python-dotenv = "*"
+textblob = "*"
 
 [requires]
 python_version = "3.8"
