--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ pandas = "*"
 matplotlib = "*"
 airtable-python-wrapper = "*"
 python-dotenv = "*"
+airtable = "*"
+jupyter = "*"
 
 [requires]
 python_version = "3.8"
